[gd_scene load_steps=46 format=2]

[ext_resource path="res://sprites/Act1settings/sceneone/vignette.png" type="Texture" id=1]
[ext_resource path="res://sprites/characters/right walk 8.png" type="Texture" id=2]
[ext_resource path="res://sprites/act 2 setting/scene 4/sewer.png" type="Texture" id=3]
[ext_resource path="res://sprites/act 2 setting/scene 4/road2.png" type="Texture" id=4]
[ext_resource path="res://sprites/characters/right walk 2.png" type="Texture" id=5]
[ext_resource path="res://sprites/characters/idle right 2.png" type="Texture" id=6]
[ext_resource path="res://sprites/act 2 setting/scene 4/piano2.png" type="Texture" id=7]
[ext_resource path="res://sprites/characters/idle right 1.png" type="Texture" id=8]
[ext_resource path="res://sprites/characters/right walk 5.png" type="Texture" id=9]
[ext_resource path="res://sprites/act 2 setting/scene 4/piano1.png" type="Texture" id=10]
[ext_resource path="res://sprites/Act1settings/sceneone/front tree.png" type="Texture" id=11]
[ext_resource path="res://act2/scene4/Path2D.gd" type="Script" id=12]
[ext_resource path="res://sprites/act 2 setting/scene 4/sewer2.png" type="Texture" id=13]
[ext_resource path="res://sprites/act 2 setting/scene 4/sky.png" type="Texture" id=14]
[ext_resource path="res://sprites/act 2 setting/scene 4/nice buildings.png" type="Texture" id=15]
[ext_resource path="res://sprites/characters/right walk 7.png" type="Texture" id=16]
[ext_resource path="res://sprites/characters/jump 1.png" type="Texture" id=17]
[ext_resource path="res://sprites/characters/right walk 6.png" type="Texture" id=18]
[ext_resource path="res://player.gd" type="Script" id=19]
[ext_resource path="res://sprites/characters/right walk 4.png" type="Texture" id=20]
[ext_resource path="res://sprites/act 2 setting/scene 4/nice buildings2.png" type="Texture" id=21]
[ext_resource path="res://sprites/characters/fall.png" type="Texture" id=22]
[ext_resource path="res://sprites/act 2 setting/scene 4/poles.png" type="Texture" id=23]
[ext_resource path="res://sprites/characters/right walk 3.png" type="Texture" id=24]
[ext_resource path="res://act2/scene4/sewer.gd" type="Script" id=25]
[ext_resource path="res://sprites/act 2 setting/scene 4/mob1.png" type="Texture" id=26]
[ext_resource path="res://sprites/act 2 setting/scene 4/mob2.png" type="Texture" id=27]
[ext_resource path="res://act2/scene4/Area2D.gd" type="Script" id=28]
[ext_resource path="res://sprites/Act1settings/sceneone/dark filter.png" type="Texture" id=29]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=30]
[ext_resource path="res://act2/scene4/oshoot.gd" type="Script" id=31]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 30 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 215.13, 166.255 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 197.701, 1065.79 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5000.86, 159.56 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 9 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 82.9133
height = 171.178

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 253.302, 211.108 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 361.018, 469.7 )

[sub_resource type="Curve2D" id=12]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 373.171, 1596.33, 0, 0, 0, 0, 14231.7, 1668.8 )
}

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 672.912, 1185.32 )

[node name="Node2D" type="Node2D"]
position = Vector2( 1035.3, 41.9109 )
script = ExtResource( 31 )

[node name="sky" type="ParallaxBackground" parent="."]
layer = -104

[node name="ParallaxLayer" type="ParallaxLayer" parent="sky"]

[node name="Sprite" type="Sprite" parent="sky/ParallaxLayer"]
position = Vector2( 3833.07, 1062.9 )
texture = ExtResource( 14 )

[node name="vig" type="ParallaxBackground" parent="."]
layer = 2

[node name="ParallaxLayer" type="ParallaxLayer" parent="vig"]

[node name="Sprite" type="Sprite" parent="vig/ParallaxLayer"]
position = Vector2( 3833.07, 1062.9 )
texture = ExtResource( 1 )

[node name="pole" type="ParallaxBackground" parent="."]
layer = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="pole"]
motion_scale = Vector2( 0.5, 1 )

[node name="Sprite" type="Sprite" parent="pole/ParallaxLayer"]
position = Vector2( 3667.68, 1190.99 )
scale = Vector2( 0.846234, 1 )
texture = ExtResource( 23 )

[node name="tree" type="ParallaxBackground" parent="."]
layer = -101
scroll_offset = Vector2( 0.5, 0 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="tree"]

[node name="Sprite" type="Sprite" parent="tree/ParallaxLayer"]
position = Vector2( 2165.34, 1052.42 )
scale = Vector2( 0.499088, 1 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="tree/ParallaxLayer"]
position = Vector2( 3946.53, 1048.26 )
scale = Vector2( 0.499088, 1 )
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="tree/ParallaxLayer"]
position = Vector2( 7540.14, 1025.22 )
scale = Vector2( 0.499088, 1 )
texture = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2791.13, 1098.35 )
texture = ExtResource( 4 )

[node name="sewer" type="Area2D" parent="."]
script = ExtResource( 25 )

[node name="sewerLabel" type="Label" parent="sewer"]
margin_left = 5913.91
margin_top = 1235.94
margin_right = 6144.91
margin_bottom = 1348.94
custom_fonts/font = SubResource( 1 )
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="sewer"]
position = Vector2( 6309.14, -263.828 )
scale = Vector2( 1.4071, 2.46728 )
frames = SubResource( 2 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="sewer"]
position = Vector2( 6071.31, 1917.29 )
shape = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -861.701, 1074.99 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 6539.56, 1104.02 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3502.53, 2135.01 )
shape = SubResource( 5 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 209.129, 34.8548 )
z_index = 1
script = ExtResource( 19 )

[node name="playerSprite" type="AnimatedSprite" parent="player"]
position = Vector2( 1773.43, 1772.07 )
scale = Vector2( 0.70485, 0.717409 )
frames = SubResource( 6 )
animation = "walk"
speed_scale = 1.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 1761.46, 1839.12 )
shape = SubResource( 7 )

[node name="Walk" type="AudioStreamPlayer2D" parent="player"]
position = Vector2( 1760.16, 1856.01 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 1751.45, 1838.59 )
scale = Vector2( 19.71, -11.2017 )
current = true
limit_left = 0
limit_top = 0
limit_right = 7680
limit_bottom = 2160

[node name="piano" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="piano"]
position = Vector2( 952.177, 1624.13 )
scale = Vector2( 3.35704, 2.52924 )
frames = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="piano"]
position = Vector2( 948.362, 1810.93 )
shape = SubResource( 9 )

[node name="buildings" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="buildings"]
position = Vector2( 2847.58, 1096.01 )
z_index = -1
frames = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="buildings"]
position = Vector2( 1764.86, 1543.24 )
shape = SubResource( 11 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 12 )
script = ExtResource( 12 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 5668.75, 1624.02 )
rotation = 0.00521911
offset = 5000.0

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D"]
script = ExtResource( 28 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Path2D/PathFollow2D/Area2D"]
position = Vector2( -5122.92, -173.752 )
scale = Vector2( 0.570285, 0.581476 )
frames = SubResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Area2D"]
position = Vector2( -4892.99, -749.731 )
z_index = 5
shape = SubResource( 14 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 2851.96, 647.412 )
scale = Vector2( 2.02972, 1 )
z_index = 1
z_as_relative = false
texture = ExtResource( 29 )
[connection signal="body_entered" from="sewer" to="sewer" method="_on_sewer_body_entered"]
[connection signal="body_exited" from="sewer" to="sewer" method="_on_sewer_body_exited"]
[connection signal="body_entered" from="piano" to="piano" method="_on_piano_body_entered"]
[connection signal="body_exited" from="piano" to="piano" method="_on_piano_body_exited"]
[connection signal="body_entered" from="buildings" to="buildings" method="_on_buildings_body_entered"]
[connection signal="body_exited" from="buildings" to="buildings" method="_on_buildings_body_exited"]
[connection signal="body_entered" from="Path2D/PathFollow2D/Area2D" to="Path2D/PathFollow2D/Area2D" method="_on_Area2D_body_entered"]
